--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@ header {
   background-color: rgb(51, 51, 51);
   color: white;
 }
+
+main {
+  text-align: center;
+  color: white;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
