--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,42 @@ main {
   color: white;
   margin-top: 40px;
   margin-bottom: 20px;
+
+  .TaskTitle {
+    color: rgb(31, 31, 31);
+  }
+
+  h1 {
+    margin-bottom: 25px;
+  }
+  h2 {
+    margin-bottom: 20px;
+    color: rgb(0, 213, 255);
+  }
+  h3 {
+    margin-bottom: 10px;
+    color: rgb(59, 59, 59);
+  }
+  ul {
+    margin-bottom: 30px;
+  }
+  .time {
+    margin-bottom: 20px;
+  }
+
+  button {
+    margin-left: 10px;
+    color: white;
+    background-color: rgb(136, 41, 0);
+    padding: 5px;
+    border: 0;
+  }
+}
+
+footer {
+  text-align: center;
+  color: white;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 25px;
 }
